10th sprint: PR fixes